--- a/pages/material.html
+++ b/pages/material.html
@@ -11,6 +11,7 @@
     </ul>
     <h1>Git basic</h1>
     <p>Git adalah centralize version control system yang sering digunakan oleh programmer profesional saat ini</p>
+    <p>Github adalah platform untuk menyimpan repo secara online</p>
 </body>
 
 </html>
